# RAGToolBox

./: .gitignore  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml  Lint.yml  Package.yml
RAGToolBox/: __init__.py  augmenter.py  chunk.py  embeddings.py  index.py  loader.py  logging.py  retriever.py  vector_store.py
RAGToolBox/config/: prompts.yaml
docs/: index.md
src/: augmenter.py  chunk.py  index.py  loader.py  retrieval.py  retriever.py  vector_store.py
tests/: Run_tests.sh  conftest.py  test_augmenter.py  test_augmenter_integration.py  test_augmenter_unit.py  test_chunk.py  test_embeddings.py  test_index.py  test_loader.py  test_logging.py  test_retrieval.py  test_retriever.py  test_vector_store.py
utils/: check_coverage.py
