[tool.poetry]
name = "lifu-rag"
version = "0.1.0"
description = ""
authors = ["Nick-Nunley <nicknunley17@ucla.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.26"
openai = "^1.95.1"
faiss-cpu = "^1.11.0"
tiktoken = "^0.9.0"
streamlit = "^1.46.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
