[tool.poetry]
name = "lifu-rag"
version = "0.1.0"
description = ""
authors = ["Nick-Nunley <nicknunley17@ucla.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.26"
openai = "^1.95.1"
faiss-cpu = "^1.11.0"
tiktoken = "^0.9.0"
streamlit = "^1.46.1"
requests = "^2.32.4"
pdfplumber = "^0.11.7"
html2text = "^2025.4.15"
pytest = "^8.4.1"
bio = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
