[tool.poetry]
name = "RAGToolBox"
version = "0.1.0"
description = ""
authors = ["Nick-Nunley <nicknunley17@ucla.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.26"
openai = "^1.95.1"
faiss-cpu = "^1.11.0"
tiktoken = "^0.9.0"
streamlit = "^1.46.1"
requests = "^2.32.4"
pdfplumber = "^0.11.7"
html2text = "^2025.4.15"
pytest = "^8.4.1"
bio = "^1.8.0"
bs4 = "^0.0.2"
readability-lxml = "^0.8.4.1"
nltk = "^3.9.1"
fastembed = "^0.7.1"
huggingface_hub = "^0.33.5"
chromadb = "^1.0.15"
torch = { version = "^2.7.1", optional = true }
transformers = { version = "^4.30.0", optional = true }


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[tool.pytest.ini_options]
addopts = [
  "--cov=RAGToolBox",
  "--cov-report=term-missing",
  "--cov-report=html",
]

[tool.coverage.run]
branch = true
source = ["RAGToolBox"]
relative_files = true

[tool.coverage.report]
exclude_lines = [
  "if __name__ == .__main__.:",
  "pragma: no cover",
]
omit = ["tests/*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
